--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
-    "react-redux": "^8.0.1"
+    "react-redux": "^8.0.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
