--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@savvywombat/tailwindcss-grid-areas": "^2.1.0",
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
